--- a/blog-info.html
+++ b/blog-info.html
@@ -182,6 +182,113 @@
                             Orci eros, ullamcorper scelerisque eget eget sit magnis cursus. Vitae et praesent elit massa lectus faucibus natoque quis. Vitae magna ornare non neque lacus, quis. Egestas massa ullamcorper feugiat arcu eget condimentum hendrerit vestibulum purus. Risus bibendum habitasse dignissim diam duis. Euismod cras leo aliquam amet id varius egestas fames convallis. Platea nulla laoreet purus ornare eget porta aliquet auctor cursus. Nulla cras odio in eget quisque non aliquam. Elit ornare rutrum egestas dui viverra justo quisque lectus sagittis. Montes, facilisi aliquet tristique vestibulum. Tortor phasellus diam elementum id. Et mollis phasellus massa aliquet malesuada scelerisque imperdiet aliquet. Lectus lorem tempor ipsum blandit porttitor interdum. Est leo cursus ut dolor fermentum lacus nisl gravida.
                         </p>
                     </div>
+                    <div class="art__bottom">
+                        <div class="art__s">
+                            <div class="page-bl__heart art__heart">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="none"><path d="M8.777 3.262l.424.679.424-.679c.692-1.108 1.515-1.751 2.333-2.048s1.668-.261 2.444.049c1.556.62 2.847 2.36 2.847 4.743 0 .82-.421 1.826-1.149 2.93-.719 1.09-1.694 2.212-2.705 3.253l-2.877 2.721-.805.707-.261.228-.255.224-.27-.23-.385-.323-.728-.613-3.016-2.722c-1.063-1.041-2.087-2.163-2.843-3.254C1.189 7.821.75 6.819.75 6.006c0-2.384 1.376-4.131 3.041-4.754 1.636-.613 3.627-.169 4.986 2.01z" stroke="#000"/></svg>
+                                1
+                            </div>
+                            <div class="page-bl__soc art__soclinks">
+                                <a href="#" class="page-bl__soclink">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="13" fill="none"><path d="M19.098 5.561l-.012-1.856h-1.895l-.016 1.856-1.904.014v1.847l1.904.018.012 1.852h1.897l.012-1.856L21 7.42V5.572l-1.902-.011zM6.67 5.57l.002 2.215 3.815.041c-.56 2.747-4.394 3.638-6.423 1.843-2.087-1.573-1.988-5.024.181-6.485 1.517-1.178 3.672-.888 5.189.132.596-.537 1.154-1.112 1.691-1.706C9.864.631 8.316-.068 6.67.005 3.233-.107.074 2.825.018 6.175c-.22 2.738 1.627 5.421 4.235 6.389 2.598.975 5.93.311 7.59-1.964 1.095-1.436 1.332-3.286 1.203-5.024L6.67 5.57z" fill="#000"/></svg>
+                                </a>
+                                <a href="#" class="page-bl__soclink">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="17" fill="none"><path d="M0 6.098a5.34 5.34 0 0 1 .408-2.077c.259-.629.643-1.207 1.133-1.702.489-.489 1.048-.911 1.662-1.256A7.89 7.89 0 0 1 5.228.265 9.24 9.24 0 0 1 7.437 0c1.151 0 2.223.228 3.217.681a5.98 5.98 0 0 1 2.417 1.978c.621.864.929 1.842.929 2.932a8.72 8.72 0 0 1-.209 1.919c-.138.625-.357 1.232-.653 1.807a6.23 6.23 0 0 1-1.094 1.528c-.446.449-.985.807-1.585 1.052a5.32 5.32 0 0 1-2.067.394c-.494 0-.988-.109-1.475-.327s-.837-.516-1.047-.898l-.309 1.151-.255.97-.224.725c-.074.249-.169.492-.284.726l-.348.637c-.15.273-.319.538-.503.792l-.679.883-.151.05-.1-.102-.164-1.922c0-.626.08-1.329.238-2.11l.728-2.937.567-2.075c-.232-.441-.349-1.017-.349-1.726 0-.566.189-1.096.568-1.595s.86-.745 1.443-.745c.446 0 .792.138 1.039.415s.37.624.37 1.048c0 .45-.16 1.101-.481 1.952s-.481 1.488-.481 1.91c0 .428.164.786.491 1.067s.751.433 1.192.424c.4 0 .771-.085 1.116-.256.339-.166.633-.403.858-.692.491-.629.84-1.344 1.028-2.102l.218-1.134a7.39 7.39 0 0 0 .071-1.017c0-1.178-.4-2.096-1.196-2.754s-1.841-.984-3.122-.984c-1.457 0-2.675.44-3.651 1.324s-1.468 2-1.468 3.357a2.76 2.76 0 0 0 .141.868 2.87 2.87 0 0 0 .294.665l.294.465c.091.145.139.249.139.312 0 .191-.054.439-.162.746s-.245.46-.404.46c-.015 0-.078-.01-.187-.032-.378-.105-.72-.303-.99-.572a2.98 2.98 0 0 1-.666-.965 6.28 6.28 0 0 1-.356-1.104C.043 6.831-.002 6.465 0 6.098z" fill="#000"/></svg>
+                                </a>
+                                <a href="#" class="page-bl__soclink">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" fill="none"><path d="M16 1.658a6.95 6.95 0 0 1-1.64 1.826l.01.458c0 .945-.128 1.892-.384 2.839a10.5 10.5 0 0 1-1.173 2.721 10.54 10.54 0 0 1-1.879 2.303c-.727.669-1.601 1.202-2.621 1.599S6.199 14 5.032 14C3.21 14 1.533 13.47 0 12.411a6.59 6.59 0 0 0 .783.049c1.522 0 2.881-.505 4.077-1.514a3.04 3.04 0 0 1-1.906-.706 3.48 3.48 0 0 1-1.159-1.75 3.07 3.07 0 0 0 .618.064c.293 0 .581-.041.864-.123-.757-.163-1.385-.57-1.884-1.219S.645 5.814.645 4.965v-.044a3.06 3.06 0 0 0 1.487.442c-.448-.322-.804-.742-1.067-1.26S.671 3.025.671 2.422c0-.636.148-1.228.444-1.777.823 1.088 1.821 1.958 2.993 2.609S6.537 4.268 7.88 4.34c-.057-.257-.086-.525-.086-.805 0-.976.321-1.809.962-2.499S10.17 0 11.076 0c.948 0 1.747.372 2.397 1.116a6.26 6.26 0 0 0 2.084-.859c-.25.846-.73 1.498-1.442 1.957A6.2 6.2 0 0 0 16 1.658h0z" fill="#080808"/></svg>
+                                </a>
+                                <a href="#" class="page-bl__soclink">
+                                    f
+                                </a>
+                            </div>
+                        </div>
+                        <div class="art__auth">
+                            <div class="art__foto">
+                                <img src="img/dm.jpg" alt="">
+                            </div>
+                            <div class="art__title">
+
+                            </div>
+                            <p>
+                                Меня зовут Дмитрий. Я занимаюсь поисковой оптимизацией более четырёх лет. Моя основная специализация это продвижение англоязычных сайтов. Читайте мой блог, чтобы узнать много интересного.
+                            </p>
+                            <div class="art__auth-links">
+                                <a href="#" class="art__auth__link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="6" height="12" fill="none"><path opacity=".5" d="M1.238 12V5.789H.088V4.075h1.15v-.63c0-.903.266-1.604.798-2.102S3.315.596 4.277.596c.352 0 .737.051 1.157.154l.007 1.816c-.151-.044-.354-.066-.608-.066-.747 0-1.121.322-1.121.967v.608h1.545v1.714H3.713V12H1.238z" fill="#080808"/></svg>
+                                </a>
+                                <a href="#" class="art__auth__link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12" fill="#080808"  opacity=".5" xmlns:v="https://vecta.io/nano"><path d="M3.296 12H.82V4.075h2.476V12zM.674 2.032a1.1 1.1 0 0 1 .381-.864c.254-.225.583-.337.989-.337s.735.112.989.337a1.1 1.1 0 0 1 .381.864 1.1 1.1 0 0 1-.381.864c-.254.225-.584.337-.989.337s-.735-.112-.989-.337a1.1 1.1 0 0 1-.381-.864zM7.84 4.075l.081.93c.547-.718 1.301-1.077 2.263-1.077.825 0 1.44.247 1.846.74s.623 1.235.637 2.227V12h-2.476V6.998c0-.4-.08-.693-.242-.879s-.454-.286-.879-.286c-.483 0-.842.19-1.077.571V12H5.525V4.075H7.84z"/></svg>
+                                </a>
+                                <a href="#" class="art__auth__link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="13" height="14" fill="none"><path opacity=".5" d="M6.5 5l5.5 5v3.992H1V10l5.5-5zM8 13.992V10H5v3.992h3z" fill="#080808"/><g clip-path="url(#A)"><path opacity=".5" d="M14 9L6.5 2-1 9" stroke="#080808" stroke-width="2"/></g><defs><clipPath id="A"><path fill="#fff" d="M0 0h13v10H0z"/></clipPath></defs></svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="related">
+            <div class="container">
+                <div class="center">
+                    <h2 class="title-l">
+                        Related Posts
+                    </h2>
+                </div>
+                <div class="page-bl__items">
+                    <div class="page-bl__item">
+                        <a href="blog-info.html" class="page-bl__link">
+                            <span class="page-bl__foto">
+                                <img src="img/demo/blog1.png" alt="">
+                            </span>
+                            <span class="page-bl__txt">
+                                <span class="page-bl__title">
+                                    Лучший SEO софт — Инструменты которыми я пользуюсь для продвижения сайтов
+                                </span>
+                                <span class="page-bl__meta">
+                                    <span class="page-bl__name">
+                                        by
+                                        <span>
+                                            dmitry leiko
+                                        </span>
+                                    </span>
+                                    <span class="page-bl__sep">
+                                        -
+                                    </span>
+                                    <span class="page-bl__date">
+                                        22 July 2020 
+                                    </span>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="page-bl__item">
+                        <a href="blog-info.html" class="page-bl__link">
+                            <span class="page-bl__foto">
+                                <img src="img/demo/blog2.png" alt="">
+                            </span>
+                            <span class="page-bl__txt">
+                                <span class="page-bl__title">
+                                    23 Актуальных каталогов для бизнеса под США в 2019
+                                </span>
+                                <span class="page-bl__meta">
+                                    <span class="page-bl__name">
+                                        by
+                                        <span>
+                                            dmitry leiko
+                                        </span>
+                                    </span>
+                                    <span class="page-bl__sep">
+                                        -
+                                    </span>
+                                    <span class="page-bl__date">
+                                        22 July 2020 
+                                    </span>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
